--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,7 @@
 {
     "require": {
-        "fpdf/fpdf": "^1.8"
+        "fpdf/fpdf": "^1.8",
+        "phpoffice/phpspreadsheet": "^4.0",
+        "nesbot/carbon": "^3.8"
     }
 }
